// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageTemplates component matches snapshot with not submitted status 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <table
        class="nhsuk-table-responsive"
        data-testid="manage-template-table"
      >
        <caption
          class="nhsuk-table__caption"
        >
          List of templates
        </caption>
        <thead
          class="nhsuk-table__head"
          role="rowgroup"
        >
          <tr
            class="nhsuk-table__row"
          >
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-name"
              scope="col"
            >
              Name
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-type"
              scope="col"
            >
              Type
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-status"
              scope="col"
            >
              Status
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-date-created"
              scope="col"
            >
              Date created
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-action"
              scope="col"
            >
              Action
            </th>
          </tr>
        </thead>
        <tbody
          class="nhsuk-table__body"
        >
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="#"
              >
                Template 1
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag"
              >
                Not yet submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Jan 2021
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <a
                href="#"
              >
                <p
                  class="nhsuk-u-margin-bottom-2"
                >
                  Copy
                </p>
              </a>
              <a
                href="#"
              >
                <p
                  class="nhsuk-u-margin-bottom-2"
                >
                  Delete
                </p>
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MessageTemplates component matches snapshot with submitted status 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-full"
    >
      <table
        class="nhsuk-table-responsive"
        data-testid="manage-template-table"
      >
        <caption
          class="nhsuk-table__caption"
        >
          List of templates
        </caption>
        <thead
          class="nhsuk-table__head"
          role="rowgroup"
        >
          <tr
            class="nhsuk-table__row"
          >
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-name"
              scope="col"
            >
              Name
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-type"
              scope="col"
            >
              Type
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-status"
              scope="col"
            >
              Status
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-template-date-created"
              scope="col"
            >
              Date created
            </th>
            <th
              class="nhsuk-table__header"
              data-testid="manage-template-table-header-action"
              scope="col"
            >
              Action
            </th>
          </tr>
        </thead>
        <tbody
          class="nhsuk-table__body"
        >
          <tr
            class="nhsuk-table__row"
          >
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Name 
              </span>
              <a
                href="#"
              >
                Template 1
              </a>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Type 
              </span>
              NHS App
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Status 
              </span>
              <strong
                class="nhsuk-tag nhsuk-tag--grey"
              >
                Submitted
              </strong>
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Date created 
              </span>
              1st Jan 2021
            </td>
            <td
              class="nhsuk-table__cell"
              role="cell"
            >
              <span
                class="nhsuk-table-responsive__heading"
              >
                Action 
              </span>
              <a
                href="#"
              >
                <p
                  class="nhsuk-u-margin-bottom-2"
                >
                  Copy
                </p>
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
